--- a/main.html
+++ b/main.html
@@ -4,12 +4,35 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
+	<div class="container">
+		<div class="row" my-5 style="height: 34%;">
+			<div id="one" class="col-4" style="width: 33%">Row1 col1</div>
+			<div id="two" class="col-8" style="width:66%">Row1 col2</div>
+		</div>
+		<div class="row" my-5 style="height: 33%;">
+			<div id="three" class="col-6" style="width: 33%">Row1 col3</div>
+			<div id="four" class="col-6" style="width: 33%">Row1 col4</div>
+		</div>
+		<div class="row" my-5 style="height: 33%;">
+			<div id="five" class="col-6" style="width: 33%">Row1 col5</div>
+			<div id="six" class="col-6" style="width: 33%">Row1 col6</div>
+		</div>
+	</div>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+		crossorigin="anonymous"></script>
+
+	<script type="text/javascript" src="./script.js">
+	</script>
 
 </body>
 
