--- a/main.html
+++ b/main.html
@@ -18,13 +18,13 @@
 			<div id="one" class="col-4" style="width: 33%">Row1 col1</div>
 			<div id="two" class="col-8" style="width:66%">Row1 col2</div>
 		</div>
-		<div class="row" my-5 style="height: 33%;">
-			<div id="three" class="col-6" style="width: 33%">Row1 col3</div>
-			<div id="four" class="col-6" style="width: 33%">Row1 col4</div>
+		<div class="row justify-content-center" my-5 style="height: 33%;">
+			<div id="three" class="col-6" style="width: 33%">Row2 col1</div>
+			<div id="four" class="col-6" style="width: 33%">Row2 col2</div>
 		</div>
-		<div class="row" my-5 style="height: 33%;">
-			<div id="five" class="col-6" style="width: 33%">Row1 col5</div>
-			<div id="six" class="col-6" style="width: 33%">Row1 col6</div>
+		<div class="row justify-content-center" my-5 style="height: 33%;">
+			<div id="five" class="col-6" style="width: 33%">Row3 col1</div>
+			<div id="six" class="col-6" style="width: 33%">Row3 col2</div>
 		</div>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
