--- a/main.html
+++ b/main.html
@@ -15,16 +15,16 @@
 		integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
 	<div class="container">
 		<div class="row" my-5 style="height: 34%;">
-			<div id="one" class="col-md-4 r1c1" style="width: 33%">Row1 col1</div>
-			<div id="two" class="col-md-8 r1c2" style="width:66%">Row1 col2</div>
+			<div id="one" class="col-md-4 r1c1" >Row1 col1</div>
+			<div id="two" class="col-md-8 r1c2" >Row1 col2</div>
 		</div>
 		<div class="row justify-content-between" my-5 style="height: 33%;">
-			<div id="three" class="col-md-4 r2c1" style="width: 33%">Row2 col1</div>
-			<div id="four" class="col-md-4 r2c2" style="width: 33%">Row2 col2</div>
+			<div id="three" class="col-md-4 r2c1 offset-md-2" >Row2 col1</div>
+			<div id="four" class="col-md-4 r2c2 offset-md-2" >Row2 col2</div>
 		</div>
-		<div class="row justify-content-center" my-5 style="height: 33%;">
-			<div id="five" class="col-sm-6 r3c1" style="width: 33%">Row3 col1</div>
-			<div id="six" class="col-sm-6 r3c2" style="width: 33%">Row3 col2</div>
+		<div class="row" my-5 style="height: 33%;">
+			<div id="five" class="col-md-4 r3c1 offset-md-2" >Row3 col1</div>
+			<div id="six" class="col-md-4 r3c2" >Row3 col2</div>
 		</div>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
